--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "/dashboard",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#7367f0",
+    "theme_color": "#1e5799",
     "orientation": "portrait-primary",
     "scope": "/",
     "lang": "id",
